--- a/pom.xml
+++ b/pom.xml
@@ -3,24 +3,28 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>co.edu.uniandes.csw</groupId>
     <artifactId>MPLoCAnn</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.7</maven.compiler.source>
         <maven.compiler.target>1.7</maven.compiler.target>
     </properties>
-    <dependencies>
+    <distributionManagement>
+        <repository>
+            <id>csw-releases</id>
+            <url>http://157.253.236.129:8081/content/repositories/releases/</url>
+        </repository>
+        <snapshotRepository>
+            <id>csw-snapshots</id>
+            <url>http://157.253.236.129:8081/content/repositories/snapshots/</url>
+        </snapshotRepository>
+    </distributionManagement>
+    <dependencies>                 
         <dependency>
             <groupId>fr.inria.gforge.spoon</groupId>
             <artifactId>spoon-core</artifactId>
             <version>4.3.0</version>
-        </dependency>   
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.12</version>
-            <scope>test</scope>
-        </dependency>                
-    </dependencies>        
+        </dependency>                     
+    </dependencies>  
 </project>
